--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
               </a>
             </li>
 
-             <li class="project-item  active" data-filter-item data-category="Data Analysis">
+             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -1087,7 +1087,7 @@
 
                 <h3 class="project-title">Disney+ Clone</h3>
 
-                <p class="project-category">Data Analysis</p>
+                <p class="project-category">web development</p>
 
               </a>
             </li>
